--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 /work
 /nxs_hash_test
+/.Xil
 *.o
 *.exe
 KCU105 top level/place directives results.txt
+KCU105 top level/vivado.log
+KCU105 top level/vivado.jou
+KCU105 top level/tight_setup_hold_pins.txt
