--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ KCU105 top level/tight_setup_hold_pins.txt
 *.log
 KCU105 top level/synth_test.tcl
 sim_nexus_work_package_in_reversed_bytes.txt
+KCU105 top level/usage_statistics_webtalk.xml
+KCU105 top level/usage_statistics_webtalk.html
